Fix layout issue and default char spacing

--- a/src/less/site.less
+++ b/src/less/site.less
@@ -38,7 +38,7 @@ body {
 
 	@media (min-width: 1024px) {
 		display: grid;
-		grid-template-rows: min-content auto;
+		grid-template-rows: min-content auto 0;
 		grid-template-columns: auto 320px;
 	}
 
